# text-editor

./: CMakeLists.txt  README.md
include/: DroidSans_ttf.h  GUI.h  History.h  op.h
include/List/: LNode.h  List.h
include/Rope/: RNode.h  Rope.h
include/Stack/: SNode.h  Stack.h
lib/: GUI.cpp  History.cpp  main.cpp  op.cpp
lib/List/: List.cpp
lib/Rope/: RNode.cpp  Rope.cpp
lib/Stack/: Stack.cpp
tests/: History_test.cpp  List_test.cpp  Rope_test.cpp  op_test.cpp
